# vortex-cv

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CFGCFG.yaml  LICENSE  Makefile  README.md  codecov.yml  dependencies.repos  frames.gv  launch.sh  path_detection.yaml
aruco_detection/: CMakeLists.txt  package.xml
aruco_detection/cfg/: image_filter_parameters.cfg
aruco_detection/include/: aruco_detection_node.h  aruco_detection_node.hpp  aruco_detection_node_test.hpp  aruco_filtering_node.hpp  aruco_handler.hpp  aruco_id_node.hpp  eigen_typedefs.h  file_handler.hpp  filter_params_rqt.hpp  image_processing.hpp  rqt_reconfigure_filter_params.hpp
aruco_detection/launch/: aruco_detection.launch  aruco_detection_test.launch  docking.launch  ekf_node.launch  id_finder.launch  pipeline_following.launch
aruco_detection/other/ekf/: main.py
aruco_detection/params/: camera_parameters.yml  rectangular_board.yml
aruco_detection/scripts/: aruco_detection_node.py  reconfigure_server.py  vkf_node.py
aruco_detection/src/: aruco_detection_node.cpp  aruco_detection_node_test.cpp  aruco_handler.cpp  aruco_id_node.cpp  ekf_node.cpp  file_handler.cpp  image_processing.cpp  transforms.cpp
aruco_detection/test/: testArucoHandler.cpp  test_aruco_handler.cpp
bearing_localization/: CMakeLists.txt  README.md  package.xml
bearing_localization/config/: aruco.yaml  bearing_localization_config.yaml  default.yaml  pinger.yaml
bearing_localization/include/bearing_localization/: bearing_localization_node.hpp  geometry_checks.hpp  measurement_buffer.hpp  ray_measurement.hpp  triangulation_solver.hpp
bearing_localization/launch/: bearing_localization.launch.py
bearing_localization/src/: bearing_localization_node.cpp  geometry_checks.cpp  main.cpp  measurement_buffer.cpp  triangulation_solver.cpp
bearing_localization/src/lib/: bearing_localizer.cpp  geometry_checks.cpp  measurement_buffer.cpp  triangulation_solver.cpp
bearing_localization/src/ros/: bearing_localization_node.cpp  debug_markers.cpp  main.cpp
camera_calibration/scripts/: CMakeLists.txt  SN38762967FACTORY_REAL_THIS_TIME_FU_BENJAMIN.conf  calibration_params.txt  calibration_tut.py  camera_acquisition.cpp  camera_calibration_node.py  cv2_calibrating.py  cv2_stereo_calibration copy.py  cv2_stereo_calibration.py  gen_pattern.py  read_config.py  stereo_calib.cpp  stereo_calib2.cpp  stereo_calibration_tut.py  stereo_vision_tut.py  triangulation.py
cv_msgs/: CMakeLists.txt  package.xml
cv_msgs/msg/: BBox.msg  Centeroid.msg  CenteroidArray.msg  PointArray.msg
image_filters/: CMakeLists.txt  package.xml
image_filters/cfg/: image_filter_parameters.cfg
image_filters/include/: filter_params_rqt.hpp  image_processing.hpp
image_filters/launch/: image_filtering_node.launch
image_filters/src/: image_filtering_node.cpp  image_processing.cpp
image_preprocessing/: CMakeLists.txt  package.xml
image_preprocessing/include/SLIC_node/: SLIC_node.hpp
image_preprocessing/include/image_preprocessing/: ImagePreprocessing.h
image_preprocessing/include/image_preprocessing_cpp/: ImagePreprocessing.hpp
image_preprocessing/launch/: image_preprocessing.launch  image_preprocessing_cpp.launch
image_preprocessing/scripts/: ImagePreprocessing.py  ImagePreprocessing_gpu.py  image_preprocessing.py  image_preprocessing_node.hpp  image_preprocessing_node.py  read_yaml_config.py
image_preprocessing/src/: SLIC_node.cpp  imagePreprocessing.cpp  image_preprocessing_cpp_node.cpp  image_preprocessing_node.cpp
line_detection/line_detection_ransac/: CMakeLists.txt  README.md  package.xml
line_detection/line_detection_ransac/config/: line_detection_ransac_real.yaml
line_detection/line_detection_ransac/launch/: line_detection_ransac.launch.py
line_detection_sonar/: CMakeLists.txt  package.xml
line_detection_sonar/config/: line_detection_sonar.yaml
line_detection_sonar/launch/: line_detection_sonar.launch.py
line_detection_sonar/src/lib/: houghp_line_detection.cpp
mission/vortex_yasmin_utils/: CMakeLists.txt  package.xml
mission/vortex_yasmin_utils/src/: converge_state.cpp  (+9 more)
path_following/: CMakeLists.txt  package.xml  path_following_node.py
path_following/launch/: path_following_node.launch  pipeline_following_node.launch
path_following/params/: K.txt  K_opt.txt  dcs.txt  udfc_cam_params.yaml
path_following/scripts/: RANSAC.py  README.md  dynam_recfg.py  feature_detection.py  feature_detection_sim_node.py  icp.py  image_extraction.py  path_following_node.py  pipeline_following_node.py  pipeline_following_node_TF.py  tests.py
pipeline_following/: CMakeLists.txt  README.md  package.xml
pipeline_following/cfg/: GainTuning.cfg
pipeline_following/launch/: pipeline_following_node.launch
pipeline_following/scripts/: HOG.py  RANSAC.py  pipeline_following_node.py
rcfa_detection/: CMakeLists.txt  package.xml
rcfa_detection/launch/: rcfa_node.launch
rcfa_detection/scripts/: rcfa_detection_node.py
tracking/: -  CMakeLists.txt  package.xml
tracking/cfg/: Tracker.cfg  Tracking.cfg
tracking/config/: config_traking_sys.yaml
tracking/launch/: boat_tracking.launch  cvObject_tracking.launch  mul_cvObjecta_tracking.launch  vizualize_tracking.launch
tracking/scripts/: README.md  boat_tracking_node.py  cvObjects_tracking_node.py  mul_cvObjects_tracking_node.py  mul_cvobjects_tracking_node.py  pdaf.py  reconfigure_server.py  single_cvobject_tracking_node.py  test_node.py  test_pdafTester.py  test_pdaf_test_setup.py  test_plots.py  trackManager.py  trackManagerMultipleTracks.py  track_manager.py  track_manager_multiple_tracks.py  track_manager_single_track.py  visualizer_node.py
vision_kf/: CMakeLists.txt  ReadMe.txt  package.xml
vision_kf/launch/: ekf_node.launch
vision_kf/other/: ReadMe.txt
vision_kf/scripts/: fake_gate_publisher.py  vkf_node.py
vortex_cv_utils/: CMakeLists.txt  package.xml
vortex_cv_utils/cpp_test/: CMakeLists.txt
vortex_cv_utils/src/: image_conversions.cpp  pose_conversions.cpp
vortex_cv_utils/test/: CMakeLists.txt  test_image_conversions.cpp  test_pose_conversions.cpp
(+535 files in other folders)
