<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bearing_localization</name>
  <version>0.0.0</version>
  <description>bearing-based target localization from multiple 3D direction measurements.</description>

  <maintainer email="todo@example.com">vortex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>libeigen3-dev</depend>
  <depend>vortex_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
