<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>line_detection_sonar</name>
  <version>0.0.0</version>
  <description>Package for detecting lines on images produces by an FLS sonar.</description>

  <maintainer email="jorgen.fjermedal@hotmail.com">jorgen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>vortex_utils</depend>
  <depend>vortex_utils_ros</depend>
  <depend>vortex_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
