<?xml version="1.0"?>
<package format="2">
  <name>pipeline_following</name>
  <version>0.0.0</version>
  <description>The pipeline_following package</description>

  <maintainer email="lassemg@stud.ntnu.no">ivan</maintainer>

  <license>GPLv3</license>

  <url type="website">http://github.com/vortexntnu/Vortex_CV</url>

  <author email="lassemg@stud.ntnu.no">lasse</author>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
