<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipeline_end_detector</name>
  <version>0.0.0</version>
  <description>
    Subscribes to the end-of-pipeline detection topic and, after a configurable
    number of consecutive detections, triggers a service call to the pipeline
    inspection FSM to signal that the pipeline has ended.
  </description>
  <maintainer email="ashishbhardwaj2005@gmail.com">vortex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>vortex_msgs</depend>
  <depend>vortex_utils_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
