<?xml version="1.0"?>
<package format="3">
  <name>subsea_docking_setup</name>
  <version>0.0.1</version>
  <description>Launch and configuration package for subsea docking</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>line_detection_ransac</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
